--- a/Application/app/src/main/res/values/strings.xml
+++ b/Application/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Application</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_page_profils">PageProfils</string>
 </resources>
