--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Guitar LEDgend</string>
-    <string name="start">START</string>
+    <string name="start">Start</string>
 </resources>
