StatsActivity: ajout du graphe Quelques modifs dans la base de donnes des utilisateurs

--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="jour">Jour</string>
     <string name="annee">Annee</string>
     <string name="mois">Mois</string>
-    <string name="chercher">Chercher</string>
+    <string name="dernieres_stats">Dernières Stats</string>
 
     <string name="fichier">Fichier</string>
     <string name="nom">Nom</string>
