--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -33,5 +33,10 @@
     <string name="title_activity_profils">ProfilsActivity</string>
     <string name="title_activity_bla">BlaActivity</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_ex">ExActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
 
 </resources>
