ProfilesActivity : possibilité de créer un nouveau profil, et d'en selectionner un (création de ProfilesAdapter, ChooseProfileFragment, CreateProfileFragment)

--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -37,6 +37,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_ex">ExActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="nouveau_profil">Nouveau Profil</string>
+    <string name="sexe">Sexe</string>
+    <string name="homme">Homme</string>
+    <string name="femme">Femme</string>
 
 
 </resources>
