PartitionPlayingActivity, PostPlayingActivity: creation

--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -42,5 +42,7 @@
     <string name="homme">Homme</string>
     <string name="femme">Femme</string>
 
+    <string name="vitesse">Vitesse ?</string>
+
 
 </resources>
