--- a/todo
+++ b/todo
@@ -3,3 +3,5 @@ faire dossier "reception" sur lappli ou lon reçoit le tableau des booleans de l
 
 photo profil
 tinder: proposition aleatoire de partitions
+
+choix des partitions : trois boutons nom, genre, auteur -> tri des partitions affichées en fonction
