Changement de noms de layout de menu HelpActivity : création -> ajout du menu Aide dans les deux navigations drawers déjà en place

--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="femme">Femme</string>
 
     <string name="vitesse">Vitesse ?</string>
+    <string name="title_activity_help">HelpActivity</string>
 
 
 </resources>
