--- a/todo
+++ b/todo
@@ -7,12 +7,17 @@ Au plus vite :
 Moins important :
 
 - Mettre des navigations drawer là où il en faut (préférences, profils, aide, share pour stats renvoyant aux sms)
-- Choix des partitions : trois boutons nom, genre, auteur -> tri des partitions affichées en fonction
+- rejouer zone: graphe
+- aide
+- preferences
+
 
 
 
 Plus tard : 
 
+- Choix des partitions : trois boutons nom, genre, auteur -> tri des partitions affichées en fonction
+- defilement des partitions
 - Photo profil
 - Tinder: proposition aleatoire de partitions
 - Définir des styles de boutons, gérer les polices
