--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
 
     <string name="vitesse">Vitesse ?</string>
     <string name="title_activity_help">HelpActivity</string>
+    <string name="title_activity_replay_area">ReplayAreaActivity</string>
 
 
 </resources>
