Fin du scenario (rejouer zone) + modification todo

--- a/todo
+++ b/todo
@@ -7,8 +7,7 @@ Au plus vite :
 Moins important :
 
 - Mettre des navigations drawer là où il en faut (préférences, profils, aide, share pour stats renvoyant aux sms)
-- rejouer zone: graphe
-- aide
+- mettre stats dans memoire interne
 - preferences
 
 
