--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -118,6 +118,10 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="autre">autre</string>
+    <string name="Autre">Autre</string>
+    <string name="age">Age</string>
+    <string name="pref_header_profiles">Profils</string>
 
 
 </resources>
