--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -122,6 +122,7 @@
     <string name="Autre">Autre</string>
     <string name="age">Age</string>
     <string name="pref_header_profiles">Profils</string>
+    <string name="title_activity_test_playing">TestPlayingActivity</string>
 
 
 </resources>
