--- a/GuitarLEDgend/app/src/main/res/values/strings.xml
+++ b/GuitarLEDgend/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="annee">Annee</string>
     <string name="mois">Mois</string>
     <string name="dernieres_stats">Dernières Stats</string>
+    <string name="high_scores">High Scores</string>
 
     <string name="fichier">Fichier</string>
     <string name="nom">Nom</string>
